add task to active reverse pump

--- a/settings.yml
+++ b/settings.yml
@@ -2,6 +2,7 @@
 # Raspidrink settings
 # Use YAML syntax
 # ---------------------
+# Switch to True if the code is launch from the RPI. Leave False in development
 active_gpio: False
 
 # mapping port slot number --> GPIO port number
