--- a/settings.yml
+++ b/settings.yml
@@ -2,15 +2,24 @@
 # Raspidrink settings
 # Use YAML syntax
 # ---------------------
-# Switch to True if the code is launch from the RPI. Leave False in development
+# Switch to True if the code is launched from the RPI. Leave False for development as the GPIO lib only works on a Rpi
 active_gpio: False
 
 # mapping port slot number --> GPIO port number
 gpio_mapping:
-  0: 26
+  0: 21
   1: 4
   2: 17
   3: 27
   4: 22
   5: 5
   6: 6
+  7: 13
+  8: 19
+  9: 26
+  10: 18
+  11: 23
+  12: 24
+  13: 25
+  14: 12
+  15: 16
