--- a/settings.yml
+++ b/settings.yml
@@ -11,21 +11,55 @@ time_multiplier: 2.5
 
 # mapping port. configure your slot in reference to the selected port number over the rpi
 # slot number --> GPIO port number
+#             --> Time for the pump behind this slot to fill 1 cl
 # The slot number 0 is reserved to the Rpi pin that control the reverse relay.
 gpio_mapping:
-  0: 21
-  1: 4
-  2: 17
-  3: 27
-  4: 22
-  5: 5
-  6: 6
-  7: 13
-  8: 19
-  9: 26
-  10: 18
-  11: 23
-  12: 24
-  13: 25
-  14: 12
-  15: 16
+  0:
+    pin_number: 21
+    time_for_1cl: 1
+  1:
+    pin_number: 4
+    time_for_1cl: 3.1
+  2:
+    pin_number: 17
+    time_for_1cl: 3.3
+  3:
+    pin_number: 27
+    time_for_1cl: 3.6
+  4:
+    pin_number: 22
+    time_for_1cl: 3.25
+  5:
+    pin_number: 5
+    time_for_1cl: 4.6
+  6:
+    pin_number: 6
+    time_for_1cl: 3.6
+  7:
+    pin_number: 13
+    time_for_1cl: 3.25
+  8:
+    pin_number: 19
+    time_for_1cl: 2.85
+  9:
+    pin_number: 26
+    time_for_1cl: 3.03
+  10:
+    pin_number: 18
+    time_for_1cl: 3
+  11:
+    pin_number: 23
+    time_for_1cl: 3
+  12:
+    pin_number: 24
+    time_for_1cl: 3.1
+  13:
+    pin_number: 25
+    time_for_1cl: 3
+  14:
+    pin_number: 12
+    time_for_1cl: 3
+  15:
+    pin_number: 16
+    time_for_1cl: 3.3
+
